--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1> Hello, this is my personal website. </h1>
+<h1 style="color:#336B87;"> Hello, this is my personal website. </h1>
 
-Welcome!
+<p style="color:#2A3132;"> Welcome! </p>
 
