First try - added CV

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1 style="color:#336B87;"> Hello, this is my personal website. </h1>
-
-<p style="color:#2A3132;"> Welcome! </p>
-
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>kekayan's Resume</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url= /files/YixinMao_CV_202011.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
+</html>
