--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<html lang="en" style="width:100%; height:100%;">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
-</head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= /files/YixinMao_CV_202011.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<html>
+    <h1> <img src="/files/YixinMao_CV_202011.pdf" alt="YixinMao_CV" style="width:300px"> </h1>
 </html>
