--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-    <h1> <img src="/files/YixinMao_CV_202011.pdf" alt="YixinMao_CV" style="width:300px"> </h1>
+    <h1> Hellllo </h1>
 </html>
