--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-    <h1> Hellllo </h1>
-    <img src="/files/YixinMao_CV_202011.pdf" alt="Mountain" style="width:300px">
+    <h1> Yixin Mao </h1>
+    <a href="files/YixinMao_CV_202011.pdf">CURRICULUM VITAE</a>
 </html>
